production/kowl/50.Service.yml
kind: Service
apiVersion: v1
metadata:
  name: kowl
  namespace: kowl
  labels:
    app.kubernetes.io/component: kowl
    app.kubernetes.io/name: kowl
spec:
  selector:
    app.kubernetes.io/component: kowl
    app.kubernetes.io/name: kowl
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
