production/kowl/50.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kowl-ingress
  namespace: kowl
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  defaultBackend:
    service:
      name: kowl
      port:
        number: 80
  rules:
  - host: "kowl.k8s.home"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kowl
              port:
                number: 80
